# fastapi_starter_boilerplate

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
.github/skills/: README.md  SKILL.md  normalized-instruction-matrix.md  trigger-test-set.md
.github/skills/fastapi-auth-security/: SKILL.md
.github/skills/fastapi-data-crud-patterns/: SKILL.md
.github/skills/fastapi-foundation-contracts/: SKILL.md
.github/skills/fastapi-genai-application-patterns/: SKILL.md
.github/skills/fastapi-genai-orchestrator/: SKILL.md
.github/skills/fastapi-integration-reliability/: SKILL.md
.github/skills/fastapi-observability-operations/: SKILL.md
alembic/: env.py
alembic/versions/: 20260530_01_create_auth_users.py
app/: __init__.py  config.py  main.py  models.py  schemas.py
app/agents/: adaptive_router.py  document_grader.py  query_decomposer.py
app/components/: hybrid_retriever.py  reranker.py
app/evaluation/: golden_dataset.json  offline_eval.py  online_monitor.py
app/observability/: cost_tracker.py  feedback.py  tracer.py
app/prompts/: registry.py  templates.py
app/security/: content_filter.py  input_guard.py  output_filter.py
app/services/: auth_service.py  http_client.py  memory_service.py  migrations.py  query_rewriter.py  query_router.py  rag_pipeline.py  semantic_cache.py
app/tools/: code_search.py  vector_search.py  web_search.py
docs/: api-reference.md  architecture.md  deployment.md
scripts/: healthcheck.py  migrate.py  seed.py
tests/: conftest.py  test_cache.py  test_retrieval.py  test_routing.py  test_security_filters.py
(+63 files in other folders)
