[project]
name = "starter-boilerplate"
version = "0.1.0"
description = "FastAPI starter boilerplate with auth, structured logging, and quota middleware"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.16.0",
    "bcrypt>=4.3.0",
    "code-review-graph",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]

[project.scripts]
starter-boilerplate = "main:main"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.2",
]

[tool.uv.sources]
code-review-graph = { path = "../../code-review-graph-main", editable = true }
